# Shieldx

./: .env.example  .gitignore  CLAUDE.md  README.md  hardhat.config.js  package-lock.json  package.json
.claude/rules/: rust.md  solidity.md  testing.md
contracts/core/: ShieldXExecutor.sol  ShieldXRouter.sol  ShieldXSettlement.sol  ShieldXVault.sol
contracts/interfaces/: IShieldXEngine.sol  IShieldXRouter.sol  IXCM.sol
contracts/libraries/: EpochLib.sol  OrderLib.sol
contracts/mock/: MockShieldXEngine.sol
contracts/precompile/: Cargo.toml
contracts/precompile/src/: lib.rs
docs/: INTEGRATION_GUIDE.md  LITEPAPER.md  SECURITY.md  TECHNICAL_SPEC.md  pitch-deck.html
frontend/: index.html  package-lock.json  package.json  playwright.config.js
frontend/e2e/: app.spec.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BatchVisualizer.jsx  Dashboard.jsx  Docs.jsx  EpochHistory.jsx  EpochTimer.jsx  Header.jsx  OrderPanel.jsx  SandwichDemo.jsx
frontend/src/hooks/: useEpoch.js  useShieldX.js  useWallet.js
frontend/src/utils/: commitHash.js  contracts.js  theme.js
scripts/: demo-sandwich.js  demo-testnet.js  deploy.js  settle.js
sdk/: README.md  package-lock.json  package.json
sdk/src/: constants.js  index.js
test/integration/: full-flow.test.js
test/unit/: AccessControl.test.js  MockShieldXEngine.test.js  ProtocolFee.test.js  ShieldXExecutor.test.js  ShieldXRouter.test.js  ShieldXSettlement.test.js  ShieldXVault.test.js  Surplus.test.js
