[package]
name = "shieldx-engine"
version = "0.1.0"
edition = "2021"
description = "ShieldX Batch Auction Engine — Rust precompile for PolkaVM (RISC-V)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[features]
default = ["std"]
std = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
